--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+
   },
   "keywords": [],
   "author": "",
@@ -14,7 +17,8 @@
     "@types/express": "^4.17.17"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
+    "wait-port": "^1.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
