--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://oluseun:secret@192.168.128.2:5432/room_db?schema=public"
+DATABASE_URL="postgres://room_db_user:g47flIQvJqFmjAovAHFFqqUZKoUKQT2V@dpg-ch39ddjh4hsum429npq0-a.oregon-postgres.render.com/room_db"
 
 ORIGIN="http://127.0.0.1:5173"
