--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
+    "build": "npm install && npx prisma migrate dev --name init",
     "start": "node src/index.js"
 
   },
