--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "build": "npm install && npx prisma migrate dev --name init",
+    "build": "npx prisma migrate dev --name init",
+    "deploy": "npm install && npx prisma migrate deploy",
     "start": "node src/index.js"
 
   },
