--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "build": "npx prisma migrate dev --name init",
-    "deploy": "npm install && npx prisma migrate deploy && npx prisma generate && node src/index.js",
+    "deploy": "npm install && npx prisma migrate deploy && npx prisma generate",
     "start": "node src/index.js"
 
   },
