--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "prisma": "^4.13.0"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
-    "wait-port": "^1.0.4",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "wait-port": "^1.0.4"
   }
 }
