--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
+    "dev": "npx tsc && nodemon src/index.js",
     "build": "npx prisma migrate dev --name init",
     "deploy": "npm install && npx prisma migrate deploy && npx prisma generate",
     "start": "npx tsc && node src/index.js"
